# logr

./: .clang-format  CMakeLists.txt
include/logr/: Logger.h  defines.h  logr.h
include/logx/: Logger.h  defines.h  logx.h
src/: Logger.cpp
